--- a/lib/repositories.config
+++ b/lib/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\source\MvcFlashMessages.Tests\packages.config" />
   <repository path="..\source\MvcFlashMessages\packages.config" />
+  <repository path="..\source\Sample\packages.config" />
 </repositories>
