--- a/source/MvcFlashMessages/MvcFlashMessages.csproj
+++ b/source/MvcFlashMessages/MvcFlashMessages.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="MvcFlashMessages.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
