--- a/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
+++ b/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="FlashMessageTests.cs" />
     <Compile Include="HtmlHelperExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempDataDictionaryExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
