--- a/source/MvcFlashMessages/MvcFlashMessages.csproj
+++ b/source/MvcFlashMessages/MvcFlashMessages.csproj
@@ -76,6 +76,7 @@
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="KeyUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempDataDictionaryExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
