--- a/nuget/MvcFlashMessages.nuspec
+++ b/nuget/MvcFlashMessages.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>MvcFlashMessages</id>
-        <version>0.2.0</version>
+        <version>0.2.1</version>
         <title>MVC Flash Messages</title>
         <authors>Jarrett Meyer</authors>
         <owners>Jarrett Meyer</owners>
@@ -12,9 +12,7 @@
 Adds support for adding and displaying Rails "flash" messages to MVC. Works with any version of MVC 3.0 and higher. See the project URL for more examples.
         </description>
         <releaseNotes>
-0.1.0 - First release.
-0.1.1 - Updated NuGet metadata.
-0.2.0 - Added extension method to get flash messages out of TempData. This makes testing scenarios a bit easier. Also, the temp data key is now exposed.
+See the project page for release info.
         </releaseNotes>
         <copyright>Copyright 2013</copyright>
         <tags>Flash MVC MVC3 MVC4 MVC5 Flash Messages CSS</tags>
