--- a/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
+++ b/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigTests.cs" />
     <Compile Include="ControllerExtensionTests.cs" />
     <Compile Include="FakeController.cs" />
     <Compile Include="FlashMessageCollectionTests.cs" />
