--- a/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
+++ b/source/MvcFlashMessages.Tests/MvcFlashMessages.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="FakeController.cs" />
     <Compile Include="FlashMessageCollectionTests.cs" />
     <Compile Include="FlashMessageTests.cs" />
+    <Compile Include="FrameworkTests.cs" />
     <Compile Include="HtmlHelperExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TempDataDictionaryExtensionsTests.cs" />
