Adds support for a close link

--- a/source/Sample/Web.config
+++ b/source/Sample/Web.config
@@ -12,6 +12,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MvcFlashMessages/IsClosable" value="true"/>
   </appSettings>
 
   <system.web>
